<?xml version="1.0"?>
<package>
  <name>gnss_localization</name>
	<version>1.0.0</version>
	<description>gnss_localization package</description>

  <maintainer email="t.n.nautilus5303@gmail.com">Takuma Nishikawa</maintainer>
	<license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>tf2</build_depend>
	<build_depend>tf2_ros</build_depend>

  <run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>tf2</run_depend>
	<run_depend>tf2_ros</run_depend>
</package>
